# RSDKv5-Decompilation

./: .gitignore  CMakeLists.txt  README.md
RSDKv5/: main.cpp  main.hpp
RSDKv5/RSDK/Audio/: Audio.cpp
RSDKv5/RSDK/Core/: Link.cpp  Link.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5/RSDK/Core/Legacy/: ModAPILegacy.cpp  RetroEngineLegacy.cpp  RetroEngineLegacy.hpp
RSDKv5/RSDK/Dev/: Debug.cpp  Debug.hpp
RSDKv5/RSDK/Graphics/: Animation.cpp  Animation.hpp  Drawing.cpp  Drawing.hpp  Palette.cpp  Palette.hpp  Scene3D.cpp  Sprite.cpp  Sprite.hpp  Video.cpp
RSDKv5/RSDK/Input/: Input.cpp  Input.hpp
RSDKv5/RSDK/Scene/: Collision.cpp  Collision.hpp  Scene.cpp  Scene.hpp
RSDKv5/RSDK/Storage/: Storage.cpp  Storage.hpp  Text.cpp  Text.hpp
rsdkv5-rs/: Cargo.toml
rsdkv5-rs/src/: lib.rs
rsdkv5-rs/src/audio/: mod.rs
rsdkv5-rs/src/core/: math.rs
rsdkv5-rs/src/dev/: debug.rs  dev_font.rs  mod.rs
rsdkv5-rs/src/engine_core/: link.rs  math.rs  mod.rs  reader.rs
rsdkv5-rs/src/engine_core/legacy/: mod.rs  retro_engine.rs
rsdkv5-rs/src/graphics/: animation.rs  drawing.rs  mod.rs  palette.rs  sprite.rs
rsdkv5-rs/src/graphics/legacy/: animation.rs  mod.rs  palette.rs
rsdkv5-rs/src/input/: mod.rs
rsdkv5-rs/src/scene/: collision.rs  mod.rs
rsdkv5-rs/src/scene/legacy/: mod.rs  object.rs
rsdkv5-rs/src/scene/legacy/v3/: object.rs  script.rs
rsdkv5-rs/src/scene/legacy/v4/: object.rs  script.rs
rsdkv5-rs/src/storage/: mod.rs  text.rs
rsdkv5-rs/src/storage/legacy/: mod.rs
rsdkv5-rs/src/user/core/: mod.rs  user_storage.rs
(+51 files in other folders)
