[package]
name = "rsdkv5-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsdkv5rs"
crate-type = ["staticlib"]

[features]
default = ["version_u", "mod_loader"]
original_code = []
version_2 = []
version_u = ["version_2"]
mod_loader = ["original_code"]

[dependencies]
cfg-if = "1.0.0"
