[package]
name = "rsdkv5-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsdkv5rs"
crate-type = ["staticlib"]

[features]
default = ["version_u", "mod_loader_v2", "legacy_use_haptics"]
original_code = []
version_2 = []
version_u = ["version_2"]
mod_loader = ["original_code"]
mod_loader_v2 = ["mod_loader"]
legacy_use_haptics = ["version_u"]

[dependencies]
cfg-if = "1.0.0"
dlopen = "0.1.8"
md5 = "0.7.0"
miniz_oxide_c_api = "0.3.0"

[profile.dev]
overflow-checks = false
